--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^17.3.0",
     "chart.js": "^4.3.0",
     "date-fns": "^3.6.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lodash": "^4.17.21",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
